# face-recognization-wallet-rust

./: .env.sample  Cargo.toml  diesel.toml
migrations/account/: up.sql
migrations/account_type/: down.sql  up.sql
src/: lib.rs  schema.rs
src/controllers/: accounts.rs  controllers.rs  mod.rs
src/databases/: mod.rs  models.rs
src/jwt/: mod.rs
src/routes/: mod.rs
src/utils/: mod.rs
