[package]
name = "cess-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
chrono = "0.4.38"
dotenv = "0.15.0"
log = "0.4.21"
tokio = { version = "1", features = ["full"] }

[[bin]]
path = "bin/cess-rust-server.rs"
name="cess-rust-server"
