[package]
name = "cess-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
anyhow = "1.0.86"
bigdecimal = "0.4.3"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenvy = "0.15.7"
hyper = "1.3.1"
lettre = "0.11.7"
log = "0.4.21"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
sp-keyring = "37.0.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
path = "bin/cess-rust-server.rs"
name="cess-rust-server"
